--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.username=root
 spring.datasource.password=Eltrakalas1
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+
+# JWT
+security.jwt.secret=ghk45jgherogho834go3h4g
+security.jwt.issuer=Main
+#La sesion dura una semana
+security.jwt.ttlMillis=604800000
